<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/begin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="@dimen/vertical_guideline_begin" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="@dimen/vertical_guideline_end" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/header"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/element_margin_common"
        app:layout_constraintBottom_toTopOf="@id/description"
        app:layout_constraintEnd_toEndOf="@id/end"
        app:layout_constraintStart_toStartOf="@id/begin"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imgThumbnail"
            android:layout_width="@dimen/thumbnail_image_width"
            android:layout_height="@dimen/thumbnail_image_height"
            android:contentDescription="@string/news_images"
            android:scaleType="fitCenter"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/element_margin_common"
            android:textColor="@color/colorBlackText"
            android:textSize="@dimen/text_size_medium"
            app:layout_constraintBottom_toTopOf="@id/subtitle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/imgThumbnail"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/sample_title" />

        <TextView
            android:id="@+id/subtitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/element_margin_common"
            android:layout_marginTop="@dimen/element_margin_common"
            android:textColor="@color/colorGreyText"
            android:textSize="@dimen/text_size_tiny"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/imgThumbnail"
            app:layout_constraintTop_toBottomOf="@id/title"
            tools:text="@string/sample_subtitle" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/element_margin_common"
        android:layout_marginBottom="@dimen/element_margin_common"
        android:textColor="@color/colorGreyText"
        android:textSize="@dimen/text_size_small"
        app:layout_constraintBottom_toTopOf="@id/date"
        app:layout_constraintEnd_toEndOf="@id/end"
        app:layout_constraintStart_toEndOf="@id/begin"
        app:layout_constraintTop_toBottomOf="@id/header"
        tools:text="@string/sample_description" />

    <TextView
        android:id="@+id/date"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/element_margin_common"
        android:textColor="@color/colorGreyText"
        android:textSize="@dimen/text_size_tiny"
        app:layout_constraintBottom_toTopOf="@id/divider"
        app:layout_constraintEnd_toEndOf="@id/end"
        app:layout_constraintTop_toBottomOf="@id/description"
        tools:text="@string/sample_display_value" />

    <View
        android:id="@+id/divider"
        style="@style/Divider"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/end"
        app:layout_constraintStart_toStartOf="@id/begin"
        app:layout_constraintTop_toBottomOf="@id/description" />

</androidx.constraintlayout.widget.ConstraintLayout>