...
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="@dimen/vertical_guideline_end" />

    <TextView
        android:id="@+id/displayName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/element_margin_common"
        android:textColor="@color/colorBlackText"
        android:textSize="@dimen/text_size_large"
        app:layout_constraintEnd_toEndOf="@id/end"
...
